--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "enzyme": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "redux-thunk": "^2.4.2",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4"
